Update HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -1,95 +1,99 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="UTF-8" /> 
+        <title>My Portfolio new</title>
+        <link rel="stylesheet" href="./styles.css" />
+    </head> 
+    <body> 
+        <div id="frist"> 
+            <img class="imagecontainer" src="https://cdn.pixabay.com/photo/2018/01/19/14/40/nature-3092555_1280.jpg" alt="Nature">
+            <h1>Dasin Madanayake</h1>
+            <p>Web Developer | Designer | Problem Solver</p> 
+            <br>
+        </div>
 
-<html lang="en">
+        <div>
+            <br>
+            <h2>About Me</h2>
+            <p>I am Studying at University of Sri Jayawardanapura</p>
+            <br>
+        </div>
 
-<head>
-    <meta charset="UTF=8">
-    <title>My Portfolio new</title>
-    <link rel="stylesheet" href="./styles.css" />
-</head>
-<body>
-    <div id="frist">
-        <img class="imagecontainer" src="https://cdn.pixabay.com/photo/2018/01/19/14/40/nature-3092555_1280.jpg" alt="Nature">
-        <h1>Dasin Madanayake</h1>
-        <p>I am Dasin Madanayake</p>
-        <br>
-    </div>
-
-    <div>
-        <h2>About Me</h2>
-        <p>I am Studying at University of Sri Jayawardanapura</p>
-        <br>
-        <hr>
-    </div>
-    <div>
-        
+        <div>
+            <br>
             <h2>Skills</h2>
             <ul>
-                <li>Communication</li>
-                <li>Mathematics</li>
-                <li>C programming Language</li>
-                <li>HTML</li>
-                <li>CSS</li>
-            </ul>
-            <hr>
-    </div>
-    <div>
-            <h2>Projects</h2>
-            <table border="1">
-                <caption>Project Details</caption>
-                <thead>
-                    <tr>
-                        <th>Project Name</th>
-                        <th>Description</th>
-                        <th>Technology Used</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Calculator App</td>
-                        <td>Description</td>
-                        <td>C programming</td>
-                    </tr>
-                    <tr>
-                        <td>Hospital Management System</td>
-                        <td>Description</td>
-                        <td>C Programming</td>
-                    </tr>
-                    <tr>
-                        <td>Library Management System</td>
-                        <td>Description</td>
-                        <td>C programming</td>
-                    </tr>
-                </tbody>
-            </table>
-            <hr>
-    </div>  
-    <div>
+                <li>Communication</li> 
+                <li>Mathematics</li> 
+                <li>C programming Language</li> 
+                <li>HTML</li> 
+                <li>CSS</li> 
+            </ul> 
 
-        <h2>Contact Me</h2>
-        <Form>
-            <p>
-                <label for="name">Name :</label>
-                <input type="text" id="name">
-            </p>
-            <p>
-                <label for="email">Email :</label>
-                <input type="email" id="email">
-            </p>
-            <p>
-                <label for="msg">Message :</label>
-                <textarea id="msg" rows="5" cols="50" placeholder="Enter Your message here"></textarea>
-            </p>
-            <button type="submit">Submit</button>button></button>
-        </Form>
-    </div>
-</body>
-<hr>
-<div>
-<footer>
-    <div class="second">
-        <p><a href="">Github</a></p>
-        <p><a href="">LinkedIn</a></p>
-    </div>
- </footer>
+        </div> 
+
+        <div>
+            <br> 
+            <h2>Projects</h2> 
+            <table border="1">
+                <caption>Project Details</caption> 
+                <thead> 
+                    <tr> 
+                        <th>Project Name</th> 
+                        <th>Description</th> 
+                        <th>Technology Used</th> 
+                    </tr> 
+                </thead> 
+                <tbody> 
+                    <tr> 
+                        <td>Calculator App</td> 
+                        <td>Description</td> 
+                        <td>C programming</td> 
+                    </tr> 
+                    <tr> 
+                        <td>Hospital Management System</td> 
+                        <td>Description</td> 
+                        <td>C Programming</td> 
+                    </tr> 
+                    <tr> 
+                        <td>Library Management System</td> 
+                        <td>Description</td> 
+                        <td>C programming</td> 
+                    </tr> 
+                </tbody> 
+            </table> 
+
+        </div> 
+
+        <div> 
+            <br> 
+            <h2>Contact Me</h2> 
+            <form> 
+                <p> 
+                    <label for="name">Name :</label> 
+                    <input type="text" id="name"> 
+                </p> 
+                <p> 
+                    <label for="email">Email :</label> 
+                    <input type="email" id="email"> 
+                </p> 
+                <p> 
+                    <label for="msg">Message :</label> 
+                    <br>
+                    <textarea id="msg" rows="5" cols="50" placeholder="Enter Your message here"></textarea> 
+                </p> 
+                <button class ="sub" type="submit">Submit</button> 
+            </form> 
+        </div> 
+    </body> 
+
+
+        <footer> 
+            <div class="second"> 
+                <br> 
+                <h3>Contact With Me</h3> 
+                <p><a href="">Github</a> | <a href="">LinkedIn</a></p> 
+            </div> 
+        </footer> 
 </html>
