Include the links

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
 
         <footer> 
-            <div class="second"> 
+           <div class="second"> 
                 <br> 
                 <h3>Contact With Me</h3> 
-                <p><a href="">Github</a> | <a href="">LinkedIn</a></p> 
+                <p><a href="https://github.com/dinsaradasin/HTML-CSS-Project-.git">Github</a> | <a href="https://lk.linkedin.com/">LinkedIn</a></p> 
             </div> 
         </footer> 
 </html>
